--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@mysten/sui": "^1.26.1",
     "@mysten/walrus": "^0.0.13",
+    "dotenv": "^16.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -17,6 +18,7 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "prettier": "3.5.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.0"
   }
