--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "start": "ts-node src/backend/index.ts",
     "build": "tsc",
-    "frontend": "react-scripts start",
+    "frontend": "vite",
+    "frontend:build": "vite build",
+    "frontend:preview": "vite preview",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -14,6 +16,7 @@
     "@mui/material": "^7.0.2",
     "@mysten/sui": "^1.26.1",
     "@mysten/walrus": "^0.0.13",
+    "@types/material-ui": "^0.21.18",
     "@types/styled-components": "^5.1.34",
     "dotenv": "^16.5.0",
     "react": "^18.2.0",
@@ -24,8 +27,10 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^4.4.1",
     "prettier": "3.5.3",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "vite": "^6.3.3"
   }
 }
