--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@mysten/sui": "^1.26.1",
     "@mysten/walrus": "^0.0.13",
     "@types/material-ui": "^0.21.18",
+    "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
     "dotenv": "^16.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.5.2",
     "styled-components": "^6.1.17"
   },
   "devDependencies": {
