--- a/package.json
+++ b/package.json
@@ -4,35 +4,35 @@
   "scripts": {
     "start": "ts-node src/backend/index.ts",
     "build": "tsc",
-    "frontend": "vite",
-    "frontend:build": "vite build",
-    "frontend:preview": "vite preview",
+    "frontend": "cd src/frontend && vite",
+    "frontend:build": "cd src/frontend && vite build",
+    "frontend:preview": "cd src/frontend && vite preview",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^7.0.2",
-    "@mui/material": "^7.0.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/material": "^5.15.10",
     "@mysten/sui": "^1.26.1",
     "@mysten/walrus": "^0.0.13",
     "@types/material-ui": "^0.21.18",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.5.2",
-    "styled-components": "^6.1.17"
+    "react-router-dom": "^6.22.1",
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@vitejs/plugin-react": "^4.4.1",
-    "prettier": "3.5.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.0",
-    "vite": "^6.3.3"
+    "@types/node": "^20.11.19",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
+    "@vitejs/plugin-react": "^4.2.1",
+    "prettier": "3.2.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
+    "vite": "^5.1.3"
   }
 }
