--- a/package.json
+++ b/package.json
@@ -16,6 +16,18 @@
     "@mui/material": "^5.15.10",
     "@mysten/sui": "^1.26.1",
     "@mysten/walrus": "^0.0.13",
+    "@remirror/extension-react-component": "^3.0.2",
+    "@remirror/pm": "^3.0.1",
+    "@remirror/react": "^3.0.2",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tiptap/extension-bubble-menu": "^2.11.9",
+    "@tiptap/extension-image": "^2.11.9",
+    "@tiptap/extension-link": "^2.11.9",
+    "@tiptap/extension-placeholder": "^2.11.9",
+    "@tiptap/pm": "^2.11.9",
+    "@tiptap/react": "^2.11.9",
+    "@tiptap/starter-kit": "^2.11.9",
+    "@tiptap/suggestion": "^2.11.9",
     "@types/material-ui": "^0.21.18",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
