--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "suitale",
   "version": "1.0.0",
   "scripts": {
-    "start": "ts-node src/backend/index.ts",
-    "build": "tsc",
+    "start": "npm run start:backend",
+    "build": "npm run build:backend && npm run build:frontend",
+    "start:backend": "cd src/backend && nest start",
+    "start:backend:dev": "cd src/backend && nest start --watch",
+    "build:backend": "cd src/backend && nest build",
     "frontend": "cd src/frontend && vite",
     "frontend:build": "cd src/frontend && vite build",
     "frontend:preview": "cd src/frontend && vite preview",
@@ -16,10 +19,18 @@
     "@mui/material": "^5.15.10",
     "@mysten/sui": "^1.26.1",
     "@mysten/walrus": "^0.0.13",
+    "@nestjs/common": "^10.3.0",
+    "@nestjs/config": "^3.1.1",
+    "@nestjs/core": "^10.3.0",
+    "@nestjs/mongoose": "^10.0.2",
+    "@nestjs/platform-express": "^10.3.0",
+    "@nestjs/swagger": "^7.1.17",
     "@remirror/extension-react-component": "^3.0.2",
     "@remirror/pm": "^3.0.1",
     "@remirror/react": "^3.0.2",
     "@tailwindcss/typography": "^0.5.16",
+    "@tanstack/react-query": "^5.75.2",
+    "@tanstack/react-query-devtools": "^5.15.0",
     "@tiptap/extension-bubble-menu": "^2.11.9",
     "@tiptap/extension-image": "^2.11.9",
     "@tiptap/extension-link": "^2.11.9",
@@ -31,20 +42,30 @@
     "@types/material-ui": "^0.21.18",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "dotenv": "^16.4.4",
+    "mongoose": "^8.0.3",
+    "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.1",
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
-    "@types/node": "^20.11.19",
+    "@nestjs/cli": "^10.4.9",
+    "@nestjs/schematics": "^10.0.3",
+    "@types/express": "^5.0.1",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^20.17.32",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
     "prettier": "3.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
-    "vite": "^5.1.3"
+    "vite": "^6.3.4"
   }
 }
