--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/material-ui": "^0.21.18",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
+    "body-parser": "^2.2.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.4.4",
