--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -22,6 +22,7 @@
     "@nestjs/mongoose": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.0.0",
+    "body-parser": "^2.2.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "mongoose": "^7.5.0",
@@ -48,4 +49,4 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2"
   }
-} 
+}
