added wallet connection on tale creation page

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
-    "@mysten/sui": "^1.26.1",
+    "@mysten/dapp-kit": "^0.16.3",
+    "@mysten/sui": "^1.29.1",
     "@mysten/walrus": "^0.0.13",
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
