--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
     "@mysten/dapp-kit": "^0.16.3",
-    "@mysten/sui": "^1.29.1",
-    "@mysten/walrus": "^0.0.13",
+    "@mysten/sui": "1.30.1",
+    "@mysten/walrus": "^0.1.1",
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.3.0",
@@ -69,5 +69,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "vite": "^6.3.4"
+  },
+  "overrides": {
   }
 }
