--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
     "@mysten/dapp-kit": "^0.16.3",
-    "@mysten/sui": "1.30.1",
+    "@mysten/sui": "^1.30.1",
     "@mysten/walrus": "^0.1.1",
+    "@mysten/walrus-wasm": "^0.0.6",
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.3.0",
@@ -44,6 +45,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
     "body-parser": "^2.2.0",
+    "buffer": "^6.0.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.4.4",
@@ -68,8 +70,10 @@
     "prettier": "3.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
-    "vite": "^6.3.4"
+    "vite": "^6.3.4",
+    "vite-plugin-node-polyfills": "^0.23.0",
+    "vite-plugin-top-level-await": "^1.5.0",
+    "vite-plugin-wasm": "^3.4.1"
   },
-  "overrides": {
-  }
+  "overrides": {}
 }
